--- a/archives.html
+++ b/archives.html
@@ -29,6 +29,7 @@
                             <li><a href="http://python.org/">Python.org</a></li>
                             <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
                             <li><a href="#">You can modify those links in your config file</a></li>
+                            <li><a href="#">Este es un enlace modificado</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
