Se añadio la entrada de Hola Mundo al blog

--- a/archives.html
+++ b/archives.html
@@ -17,8 +17,8 @@
 <h1>Archives for Penserbjorne</h1>
 
 <dl>
-    <dt>dom 11 abril 2010</dt>
-    <dd><a href="/hola-mundo.html">Hola Mundo</a></dd>
+    <dt>sáb 11 abril 2020</dt>
+    <dd><a href="/hola-mundo-es-MX.html">Hola Mundo</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
