--- a/authors.html
+++ b/authors.html
@@ -17,7 +17,7 @@
 <section id="content" class="body">
     <h1>Authors on Penserbjorne</h1>
     <ul>
-        <li><a href="/author/penserbjornepaul_aguilar.html">[Penserbjorne|Paul_Aguilar]</a> (1)</li>
+        <li><a href="/author/penserbjorne.html">penserbjorne</a> (1)</li>
     </ul>
 </section>
 
