--- a/tags.html
+++ b/tags.html
@@ -17,6 +17,8 @@
 <section id="content" class="body">
     <h1>Tags for Penserbjorne</h1>
     <ul>
+        <li><a href="/tag/blog.html">blog</a> (1)</li>
+        <li><a href="/tag/penserbjorne.html">penserbjorne</a> (1)</li>
     </ul>
 </section>
 
