--- a/archives.html
+++ b/archives.html
@@ -11,12 +11,15 @@
                 <h1><a href="/">Penserbjorne</a></h1>
                 <nav><ul>
                     <li><a href="/category/init.html">init</a></li>
+                    <li><a href="/category/pelican.html">pelican</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Penserbjorne</h1>
 
 <dl>
+    <dt>vie 24 abril 2020</dt>
+    <dd><a href="/pelican-i-creacion-de-un-blog-estatico-con-pelican-es-MX.html">Pelican (I), creación de un blog estático con Pelican</a></dd>
     <dt>sáb 11 abril 2020</dt>
     <dd><a href="/hola-mundo-es-MX.html">Hola Mundo</a></dd>
 </dl>
