--- a/tags.html
+++ b/tags.html
@@ -11,6 +11,7 @@
                 <h1><a href="/">Penserbjorne</a></h1>
                 <nav><ul>
                     <li><a href="/category/init.html">init</a></li>
+                    <li><a href="/category/pelican.html">pelican</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -18,6 +19,7 @@
     <h1>Tags for Penserbjorne</h1>
     <ul>
         <li><a href="/tag/blog.html">blog</a> (1)</li>
+        <li><a href="/tag/blog-pelican.html">blog pelican</a> (1)</li>
         <li><a href="/tag/penserbjorne.html">penserbjorne</a> (1)</li>
     </ul>
 </section>
