--- a/authors.html
+++ b/authors.html
@@ -11,13 +11,14 @@
                 <h1><a href="/">Penserbjorne</a></h1>
                 <nav><ul>
                     <li><a href="/category/init.html">init</a></li>
+                    <li><a href="/category/pelican.html">pelican</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Penserbjorne</h1>
     <ul>
-        <li><a href="/author/penserbjorne.html">penserbjorne</a> (1)</li>
+        <li><a href="/author/penserbjorne.html">Penserbjorne</a> (2)</li>
     </ul>
 </section>
 
