--- a/categories.html
+++ b/categories.html
@@ -11,11 +11,13 @@
                 <h1><a href="/">Penserbjorne</a></h1>
                 <nav><ul>
                     <li><a href="/category/init.html">init</a></li>
+                    <li><a href="/category/pelican.html">pelican</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on Penserbjorne</h1>
     <ul>
         <li><a href="/category/init.html">init</a> (1)</li>
+        <li><a href="/category/pelican.html">pelican</a> (1)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
