Cambios menosres de redacción

--- a/hola-mundo-es-MX.html
+++ b/hola-mundo-es-MX.html
@@ -57,7 +57,7 @@ gana, sin restricciones ni filtros que no sean míos.</p>
 <strong>alguna opinión o comentario personal sobre algún tema</strong>.</p>
 <p>No esperen una redacción pulcra e impecable, claramente no soy un experto en
 temas de redacción y narrativas, solo busco plasmar cosas que considere útiles e
-interesantes, so, <strong>perdonen los horrores de redacción que puedan llegar a
+interesantes, <strong>perdonen los horrores de redacción que puedan llegar a
 encontrar</strong> :P</p>
 <p>Por ahora el sitio esta alojado en GitHub Pages con un dominio de GitHub, pero
 espero en algún momento no tener flojera y comprar un dominio.</p>
