Se añadio la segunda entrada de Pelican, sobre como añadir contenido al sitio

--- a/archives.html
+++ b/archives.html
@@ -18,6 +18,8 @@
 <h1>Archives for Penserbjorne</h1>
 
 <dl>
+    <dt>sáb 09 mayo 2020</dt>
+    <dd><a href="/pelican-ii-creacion-de-entradas-para-un-blog-estatico-con-pelican-es-MX.html">Pelican (II), creación de entradas para un blog estático con Pelican</a></dd>
     <dt>vie 24 abril 2020</dt>
     <dd><a href="/pelican-i-creacion-de-un-blog-estatico-con-pelican-es-MX.html">Pelican (I), creación de un blog estático con Pelican</a></dd>
     <dt>sáb 11 abril 2020</dt>
