--- a/pelican-i-creacion-de-un-blog-estatico-con-pelican-es-MX.html
+++ b/pelican-i-creacion-de-un-blog-estatico-con-pelican-es-MX.html
@@ -36,7 +36,7 @@
                 By                         <a class="url fn" href="/author/penserbjorne.html">Penserbjorne</a>
         </address>
 <p>In <a href="/category/pelican.html">pelican</a>.</p>
-<p>tags: <a href="/tag/blog-pelican.html">blog pelican</a> </p>
+<p>tags: <a href="/tag/blog.html">blog</a> <a href="/tag/pelican.html">pelican</a> </p>
 </footer><!-- /.post-info -->      <h1>What is this?</h1>
 <p>Bueno, como primera entrada de notas, lo más lógico (para mi) es comenzar con la
 herramienta que esta haciendo posible esto, <code>Pelican</code>. Esto ira siendo una serie
