--- a/pelican-ii-creacion-de-entradas-para-un-blog-estatico-con-pelican-es-MX.html
+++ b/pelican-ii-creacion-de-entradas-para-un-blog-estatico-con-pelican-es-MX.html
@@ -36,7 +36,7 @@
                 By                         <a class="url fn" href="/author/penserbjorne.html">Penserbjorne</a>
         </address>
 <p>In <a href="/category/pelican.html">pelican</a>.</p>
-<p>tags: <a href="/tag/blog-pelican.html">blog pelican</a> </p>
+<p>tags: <a href="/tag/blog.html">blog</a> <a href="/tag/pelican.html">pelican</a> </p>
 </footer><!-- /.post-info -->      <h1>What is this?</h1>
 <p>Weno weno, ¿de que va esta entrada? Pues de cómo escribir contenido (entradas)
 en el blog con <code>Pelican</code>. Esto es continuación de la
@@ -143,7 +143,7 @@ incluir algunas etiquetas al inicio del archivo que serán consideradas como
 </tr>
 <tr>
 <td><code>keywords</code></td>
-<td>Palabras claves del contenido</td>
+<td>Palabras claves del contenido, separadas por comas</td>
 </tr>
 <tr>
 <td><code>category</code></td>
@@ -196,8 +196,8 @@ incluir algunas etiquetas al inicio del archivo que serán consideradas como
 <span class="c">Title: Este es el titulo</span>
 <span class="c">Date: 2020-05-09</span>
 <span class="c">Modified: 2020-05-09</span>
-<span class="c">Tags: blog pelican</span>
-<span class="c">Keywords: blog pelican</span>
+<span class="c">Tags: blog,pelican</span>
+<span class="c">Keywords: blog,pelican</span>
 <span class="c">Category: pelican</span>
 <span class="c">Author: Penserbjorne</span>
 <span class="c">Summary: Descripción del texto</span>
