--- a/tags.html
+++ b/tags.html
@@ -18,8 +18,8 @@
 <section id="content" class="body">
     <h1>Tags for Penserbjorne</h1>
     <ul>
-        <li><a href="/tag/blog.html">blog</a> (1)</li>
-        <li><a href="/tag/blog-pelican.html">blog pelican</a> (2)</li>
+        <li><a href="/tag/blog.html">blog</a> (3)</li>
+        <li><a href="/tag/pelican.html">pelican</a> (2)</li>
         <li><a href="/tag/penserbjorne.html">penserbjorne</a> (1)</li>
     </ul>
 </section>
