Se añadio el script temporal auto.sh y se construyeron las primeras entradas de Starting point de HTB

--- a/categories.html
+++ b/categories.html
@@ -8,14 +8,16 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Penserbjorne</a></h1>
+                <h1><a href="/">Penserbjorne </a></h1>
                 <nav><ul>
+                    <li><a href="/category/htb.html">htb</a></li>
                     <li><a href="/category/init.html">init</a></li>
                     <li><a href="/category/pelican.html">pelican</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on Penserbjorne</h1>
     <ul>
+        <li><a href="/category/htb.html">htb</a> (2)</li>
         <li><a href="/category/init.html">init</a> (1)</li>
         <li><a href="/category/pelican.html">pelican</a> (2)</li>
     </ul>
