--- a/tags.html
+++ b/tags.html
@@ -8,8 +8,9 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Penserbjorne</a></h1>
+                <h1><a href="/">Penserbjorne </a></h1>
                 <nav><ul>
+                    <li><a href="/category/htb.html">htb</a></li>
                     <li><a href="/category/init.html">init</a></li>
                     <li><a href="/category/pelican.html">pelican</a></li>
                 </ul></nav>
@@ -18,9 +19,13 @@
 <section id="content" class="body">
     <h1>Tags for Penserbjorne</h1>
     <ul>
-        <li><a href="/tag/blog.html">blog</a> (3)</li>
+        <li><a href="/tag/archetype.html">archetype</a> (1)</li>
+        <li><a href="/tag/blog.html">blog</a> (5)</li>
+        <li><a href="/tag/hacking.html">hacking</a> (2)</li>
+        <li><a href="/tag/htb.html">htb</a> (2)</li>
         <li><a href="/tag/pelican.html">pelican</a> (2)</li>
-        <li><a href="/tag/penserbjorne.html">penserbjorne</a> (1)</li>
+        <li><a href="/tag/penserbjorne.html">penserbjorne</a> (3)</li>
+        <li><a href="/tag/pentest.html">pentest</a> (2)</li>
     </ul>
 </section>
 
