--- a/archives.html
+++ b/archives.html
@@ -8,8 +8,9 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Penserbjorne</a></h1>
+                <h1><a href="/">Penserbjorne </a></h1>
                 <nav><ul>
+                    <li><a href="/category/htb.html">htb</a></li>
                     <li><a href="/category/init.html">init</a></li>
                     <li><a href="/category/pelican.html">pelican</a></li>
                 </ul></nav>
@@ -18,6 +19,10 @@
 <h1>Archives for Penserbjorne</h1>
 
 <dl>
+    <dt>jue 06 agosto 2020</dt>
+    <dd><a href="/hack-the-box-starting-point-es-MX.html">Hack-The-Box > Starting point</a></dd>
+    <dt>jue 06 agosto 2020</dt>
+    <dd><a href="/hack-the-box-starting-point-archetype-es-MX.html">Hack-The-Box > Starting point > Archetype</a></dd>
     <dt>sáb 09 mayo 2020</dt>
     <dd><a href="/pelican-ii-creacion-de-entradas-para-un-blog-estatico-con-pelican-es-MX.html">Pelican (II), creación de entradas para un blog estático con Pelican</a></dd>
     <dt>vie 24 abril 2020</dt>
