--- a/authors.html
+++ b/authors.html
@@ -8,8 +8,9 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Penserbjorne</a></h1>
+                <h1><a href="/">Penserbjorne </a></h1>
                 <nav><ul>
+                    <li><a href="/category/htb.html">htb</a></li>
                     <li><a href="/category/init.html">init</a></li>
                     <li><a href="/category/pelican.html">pelican</a></li>
                 </ul></nav>
@@ -18,7 +19,7 @@
 <section id="content" class="body">
     <h1>Authors on Penserbjorne</h1>
     <ul>
-        <li><a href="/author/penserbjorne.html">Penserbjorne</a> (3)</li>
+        <li><a href="/author/penserbjorne.html">penserbjorne</a> (5)</li>
     </ul>
 </section>
 
