Se publico la actualización de HTB > Starting Point > Archetype

--- a/hack-the-box-starting-point-es-MX.html
+++ b/hack-the-box-starting-point-es-MX.html
@@ -57,7 +57,8 @@ taquitos :)</p>
 <h2>¿Qué es esto?</h2>
 <p>Este texto son anotaciones sobre la sección <strong>Starting point</strong> de
 <strong>Hack-The-Box</strong>.</p>
-<p>No es un walk-through, no es una guía, no es un tutorial.</p>
+<p>Nos apoyaremos en los walk-throughs que ya vienen incorporados en la sección
+<em>Starting point</em> e iremos explicando los comandos utilizados.</p>
 <h2>Hack-The-Box (HTB)</h2>
 <p>Bueno, para hablar de <a href="https://www.hackthebox.eu"><strong>Hack-The-Box</strong> (HTB)</a> y
 presentar lo qué realmente es este proyecto seria bueno dedicar una entrada
