Sitio publicado el 2020-11-06

--- a/hola-mundo-es-MX.html
+++ b/hola-mundo-es-MX.html
@@ -126,7 +126,7 @@
 	<a href="https://penserbjorne.com/tag/blog.html"><i class="icon-tag"></i>blog</a>
 	<a href="https://penserbjorne.com/tag/penserbjorne.html"><i class="icon-tag"></i>penserbjorne</a>
 </footer><!-- /.post-info -->                </div>
-                <p>Bienvenido al <a href="https://penserbjorne.github.io">Blog de Penserbjorne</a>.</p>
+                <p>Bienvenido al <a href="https://penserbjorne.com">Blog de Penserbjorne</a>.</p>
 <p>Desde hace tiempo (ya bastantes años, que horror) tenia ganas de <strong>escribir</strong> en
 algún lugar que fuera <strong>personal</strong>, ¿sobre qué?, no lo sé, de lo que se me de la
 gana, sin restricciones ni filtros que no sean&nbsp;míos.</p>
@@ -151,7 +151,7 @@ encontrar</strong>&nbsp;:P</p>
 <p>Por ahora el sitio esta alojado en GitHub Pages con un dominio de GitHub, pero
 espero en algún momento no tener flojera y comprar un&nbsp;dominio.</p>
 <p>So, <strong>demos por inaugurado el
-<a href="https://penserbjorne.github.io">blog de Penserbjorne</a>, que la fuerza les
+<a href="https://penserbjorne.com">blog de Penserbjorne</a>, que la fuerza les
 acompañe</strong>.</p>
 <p><strong>#HappyHacking&nbsp;#FeedTheFox</strong></p>
                 </div><!-- /.entry-content -->
