Sitio publicado el 2020-11-06

--- a/hack-the-box-0001-starting-point-es-MX.html
+++ b/hack-the-box-0001-starting-point-es-MX.html
@@ -190,6 +190,7 @@ los siguiente&nbsp;elementos:</p>
 <li>Reconocimiento&nbsp;(Reconnaissance)</li>
 <li>Enumeración&nbsp;(Enumeration)</li>
 <li>Movimiento lateral (Lateral&nbsp;Movement)</li>
+<li>Punto de partida&nbsp;(Foothold)</li>
 <li>Explotación&nbsp;(Explotation)</li>
 <li>Escalada de privilegios (Privilege&nbsp;Escalation)</li>
 <li>Explotación posterior (Post&nbsp;Explotation)</li>
