Sitio publicado el 2021-03-31

--- a/drafts/hack-the-box-0003-starting-point-oopsie-es-MX.html
+++ b/drafts/hack-the-box-0003-starting-point-oopsie-es-MX.html
@@ -418,7 +418,7 @@ y seguir aprendiendo poco a&nbsp;poco.</p>
 <footer>
 
     <div>
-        <span class="site-name">Blog de Penserbjorne</span> - Otro sitio cliché de tecnología (que no sabe utilizar acentos) >;v
+        <span class="site-name">Blog de Penserbjorne</span> - No soy nadie. No soy nada.
     </div>
 
 
