--- a/drafts/pop-os-swap-es-MX.html
+++ b/drafts/pop-os-swap-es-MX.html
@@ -306,7 +306,7 @@ kernelstub.Installer : <span class="caps">INFO</span>     No old kernel found, s
 <footer>
 
     <div>
-        <span class="site-name">Blog de Penserbjorne</span> - Otro sitio cliché de tecnología (que no sabe utilizar acentos) >;v
+        <span class="site-name">Blog de Penserbjorne</span> - No soy nadie. No soy nada.
     </div>
 
 
