--- a/drafts/pop-os-es-MX.html
+++ b/drafts/pop-os-es-MX.html
@@ -188,6 +188,7 @@
 <p>Spotify</p>
 <ul>
 <li><code>sudo apt install spotify-client</code></li>
+<li>https://www.spotify.com/mx/download/linux/</li>
 </ul>
 </li>
 <li>
@@ -306,7 +307,7 @@
 <footer>
 
     <div>
-        <span class="site-name">Blog de Penserbjorne</span> - Otro sitio cliché de tecnología (que no sabe utilizar acentos) >;v
+        <span class="site-name">Blog de Penserbjorne</span> - No soy nadie. No soy nada.
     </div>
 
 
