--- a/hack-the-box-0001-starting-point-es-MX.html
+++ b/hack-the-box-0001-starting-point-es-MX.html
@@ -229,7 +229,7 @@ en la cual comenzaremos con la maquina
 <footer>
 
     <div>
-        <span class="site-name">Blog de Penserbjorne</span> - Otro sitio cliché de tecnología (que no sabe utilizar acentos) >;v
+        <span class="site-name">Blog de Penserbjorne</span> - No soy nadie. No soy nada.
     </div>
 
 
