--- a/hola-mundo-es-MX.html
+++ b/hola-mundo-es-MX.html
@@ -169,7 +169,7 @@ acompañe</strong>.</p>
 <footer>
 
     <div>
-        <span class="site-name">Blog de Penserbjorne</span> - Otro sitio cliché de tecnología (que no sabe utilizar acentos) >;v
+        <span class="site-name">Blog de Penserbjorne</span> - No soy nadie. No soy nada.
     </div>
 
 
