--- a/pelican-01-creacion-de-un-blog-estatico-con-pelican-es-MX.html
+++ b/pelican-01-creacion-de-un-blog-estatico-con-pelican-es-MX.html
@@ -315,7 +315,7 @@ comer y a estirar la espalda y las&nbsp;piernas.</p>
 <footer>
 
     <div>
-        <span class="site-name">Blog de Penserbjorne</span> - Otro sitio cliché de tecnología (que no sabe utilizar acentos) >;v
+        <span class="site-name">Blog de Penserbjorne</span> - No soy nadie. No soy nada.
     </div>
 
 
