--- a/pelican-02-creacion-de-entradas-para-un-blog-estatico-con-pelican-es-MX.html
+++ b/pelican-02-creacion-de-entradas-para-un-blog-estatico-con-pelican-es-MX.html
@@ -367,7 +367,7 @@ con otras cosas y nos leemos&nbsp;pronto.</p>
 <footer>
 
     <div>
-        <span class="site-name">Blog de Penserbjorne</span> - Otro sitio cliché de tecnología (que no sabe utilizar acentos) >;v
+        <span class="site-name">Blog de Penserbjorne</span> - No soy nadie. No soy nada.
     </div>
 
 
