--- a/pelican-03-configuracion-del-sitio-construccion-y-elementos-basicos-es-MX.html
+++ b/pelican-03-configuracion-del-sitio-construccion-y-elementos-basicos-es-MX.html
@@ -469,7 +469,7 @@ esto lo haremos en la siguiente entrada&nbsp;:)</p>
 <footer>
 
     <div>
-        <span class="site-name">Blog de Penserbjorne</span> - Otro sitio cliché de tecnología (que no sabe utilizar acentos) >;v
+        <span class="site-name">Blog de Penserbjorne</span> - No soy nadie. No soy nada.
     </div>
 
 
