--- a/pelican-04-configuracion-del-sitio-tema-es-MX.html
+++ b/pelican-04-configuracion-del-sitio-tema-es-MX.html
@@ -256,7 +256,7 @@ con eso habremos terminado de configurar el sitio&nbsp;:)</p>
 <footer>
 
     <div>
-        <span class="site-name">Blog de Penserbjorne</span> - Otro sitio cliché de tecnología (que no sabe utilizar acentos) >;v
+        <span class="site-name">Blog de Penserbjorne</span> - No soy nadie. No soy nada.
     </div>
 
 
